k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: devops2022.azurecr.io/mecominds:c67f298fda138767d6437fad1d2a86a3258fc34f
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/enable-metrics: "true"
    nginx-ingress.controller.metrics.enabled: "true"
    prometheus.io/scrape: "true"
    prometheus.io/port: "9113"
    prometheus.io/scheme: https
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mecominds.devops2022.de
      secretName: tls
  rules:
    - host: mecominds.devops2022.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
